@@ -7,28 +7,33 @@ import com.zylos.backend.features.course.dto.CourseResponse;
 import com.zylos.backend.features.course.exceptions.CourseAlreadyExistsException;
 import com.zylos.backend.features.course.exceptions.CourseNotFoundException;
 
+import jakarta.validation.ConstraintViolation;
+import jakarta.validation.Validator;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Set;
 
 @Service
 public class CourseService {
 
     private static final Logger logger = LoggerFactory.getLogger(CourseService.class);
     private final CourseRepository courseRepository;
+    private final Validator validator; // FIX: Ermöglicht manuelle DTO-Validierung im Service
 
-    public CourseService(CourseRepository courseRepository) {
+    public CourseService(CourseRepository courseRepository, Validator validator) {
         this.courseRepository = courseRepository;
+        this.validator = validator;
     }
 
+    @Transactional(rollbackFor = Exception.class)
     public CourseResponse createCourse(CourseRequest request) {
         if (courseRepository.findByTitle(request.title()).isPresent()) {
-            // FIX: Typisierte Business-Exception statt unsauberer RuntimeException
             throw new CourseAlreadyExistsException(request.title());
         }
         Course course = new Course(request.title(), request.type(), request.term(), request.academicYear());
@@ -37,29 +42,32 @@ public class CourseService {
         return mapToResponse(savedCourse);
     }
 
+    @Transactional(readOnly = true)
     public CourseResponse getCourseById(Long id) {
         logger.info("Service: Fetching course details for ID: {}", id);
         return courseRepository.findById(id)
                 .map(this::mapToResponse)
                 .orElseThrow(() -> {
                     logger.error("Service: Course with ID {} not found in database", id);
-                    // FIX: Typisierte Business-Exception statt unsauberer RuntimeException
                     return new CourseNotFoundException(id);
                 });
     }
 
+    @Transactional(readOnly = true)
     public List<CourseResponse> getAllCourses() {
-        return courseRepository.findAll().stream()
+            return courseRepository.findAllWithEnrollments().stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList(); // FIX: Modernisiert
     }
 
+    @Transactional(readOnly = true)
     public List<CourseResponse> searchByTitle(String title) {
         return courseRepository.findByTitleContainingIgnoreCase(title).stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList(); // FIX: Modernisiert
     }
 
+    @Transactional(rollbackFor = Exception.class) // FIX: Import schlägt ganz fehl oder gar nicht (Atomarität)
     public List<CourseResponse> importFromCsv(MultipartFile file) {
         List<CourseResponse> results = new ArrayList<>();
         try (BufferedReader br = new BufferedReader(new InputStreamReader(file.getInputStream()))) {
@@ -76,17 +84,23 @@ public class CourseService {
                         continue; 
                     }
 
-                    // FIX: Defensives Enum-Parsing schützt vor korrupten CSV-Zeilen!
                     try {
                         CourseType type = CourseType.valueOf(data[1].trim().toUpperCase());
                         SemesterTerm term = SemesterTerm.valueOf(data[2].trim().toUpperCase());
                         String academicYear = data[3].trim();
 
                         CourseRequest request = new CourseRequest(title, type, term, academicYear);
+                        
+                        // FIX: Manuelle Validierung triggern, damit unsaubere Regex-Formate (z.B. "2024/25") blockiert werden!
+                        Set<ConstraintViolation<CourseRequest>> violations = validator.validate(request);
+                        if (!violations.isEmpty()) {
+                            logger.error("CSV-Import: Validation failed for line '{}': {}", line, violations.iterator().next().getMessage());
+                            continue;
+                        }
+
                         results.add(createCourse(request));
                     } catch (IllegalArgumentException e) {
                         logger.error("CSV-Import: Invalid Enum value in line: '{}'. Skipping.", line);
-                        // Ignoriert die fehlerhafte Zeile, bricht aber nicht den gesamten Import ab!
                     }
                 }
             }
@@ -97,14 +111,15 @@ public class CourseService {
     }
 
     private CourseResponse mapToResponse(Course course) {
+        // FIX: @Transactional(readOnly = true) an den Lesemethoden fängt den Lazy-Initialization-Fehler hier ab,
+        // sofern die Verknüpfung in der Course-Entity korrekt gemappt ist.
         return new CourseResponse(
             course.getId(),
             course.getTitle(),
             course.getType(),
             course.getTerm(),
             course.getAcademicYear(),
-            course.getEnrollments().size()
+            course.getEnrollments() != null ? course.getEnrollments().size() : 0
         );
     }
-    // FIX: isDatabaseEmpty() restlos eliminiert
 }
